Bug 1940924 [Wayland] Disable frame callback emission if Vsync source doesn't need it r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D235580