widget/gtk/WaylandSurface.cpp
@@ -320,9 +320,10 @@ static const struct wl_callback_listener sWaylandSurfaceFrameListener = {
 void WaylandSurface::RequestFrameCallbackLocked(
     const WaylandSurfaceLock& aProofOfLock, bool aRequestEmulated) {
   LOGVERBOSE(
-      "WaylandSurface::RequestFrameCallbackLocked(), mapped %d emulate "
+      "WaylandSurface::RequestFrameCallbackLocked(), enabled %d mapped %d "
+      "emulate "
       "%d mFrameCallback %d",
-      !!mIsMapped, aRequestEmulated, !!mFrameCallback);
+      mFrameCallbackEnabled, !!mIsMapped, aRequestEmulated, !!mFrameCallback);
 
   MOZ_DIAGNOSTIC_ASSERT(&aProofOfLock == mSurfaceLock);
 
@@ -330,6 +331,11 @@ void WaylandSurface::RequestFrameCallbackLocked(
   if (!mIsMapped) {
     return;
   }
+
+  if (!mFrameCallbackEnabled) {
+    return;
+  }
+
   MOZ_DIAGNOSTIC_ASSERT(mSurface, "Missing mapped surface!");
 
   if (!mFrameCallback) {
@@ -403,6 +409,27 @@ void WaylandSurface::AddPersistentFrameCallbackLocked(
   mPersistentFrameCallbackHandlers.push_back(
       FrameCallback{aFrameCallbackHandler, aEmulateFrameCallback});
   RequestFrameCallbackLocked(aProofOfLock, aEmulateFrameCallback);
+}
+
+void WaylandSurface::SetFrameCallbackState(bool aEnabled) {
+  LOGWAYLAND("WaylandSurface::SetFrameCallbackState() state %d", aEnabled);
+
+  WaylandSurfaceLock lock(this);
+  if (mFrameCallbackEnabled == aEnabled) {
+    return;
+  }
+  mFrameCallbackEnabled = aEnabled;
+
+  // If there's any frame callback waiting, register the handler.
+  if (mFrameCallbackEnabled) {
+    if (!mPersistentFrameCallbackHandlers.empty() ||
+        !mOneTimeFrameCallbackHandlers.empty()) {
+      RequestFrameCallbackLocked(lock,
+                                 IsEmulatedFrameCallbackPendingLocked(lock));
+    }
+  } else {
+    ClearFrameCallbackLocked(lock);
+  }
 }
 
 bool WaylandSurface::CreateViewportLocked(
